<resources>
    <string name="app_name">Watchlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="manage_your_favourite_tv_shows_and_movies">Manage your favourite tv shows and movies</string>
    <string name="watchlist">Watchlist</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="collection">Collection</string>
    <string name="search">Search</string>
    <string name="image_explore">Movie or Show Title</string>
    <string name="title_image">Title image</string>
    <string name="plot">Plot</string>
    <string name="director">Director</string>
    <string name="stars">Stars</string>
    <string name="top_cast">Top Cast</string>
    <string name="actor_image">Actor image</string>
    <string name="layout_changer">layout changer</string>
    <string name="category">Category</string>
    <string name="layout">Layout</string>
    <string name="layout_category_icon">Layout category icon</string>
</resources>